original site tranferred

--- a/index.html
+++ b/index.html
@@ -1,4 +1,202 @@
 <!DOCTYPE html>
-<html>
-    <body>Hello Anna</body>
+<html lang="en">
+<!-- 
+
+This website was built with love by Evan Adams.
+
+oo                                        
+   oo     OOOOOOOO:       OOOOOOOO!       
+      oOOOO!!!!;;;;O    OO.......:;!O     
+     'OOO!!!;;;;;;;;O  O.......:   ;!O    
+     OOO!!!!;;::::::.OO........:    ;!O   
+     OO!!!!;;:::::..............:   ;!O   
+     OOO!!!;::::::..............:   ;!O   
+      OO!!;;::::::.............:   ;!O    
+       OO!;;::::::......oo.....::::!O     
+         O!!;::::::........oo..:::O       
+           !!!;:::::..........ooO         
+              !!;:::::.......O   oo       
+                ;;::::.....O        oo  ,o
+                   :::..O              ooo
+                     ::.              oooo 
+
+-->
+
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>anna steadham: ux researcher</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" data-offset="200">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <i class="fa fa-users"></i>  <span class="light">Anna</span> Steadham
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#download">Resume</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">ANNA STEADHAM</h1>
+                        <p class="intro-text">User Experience Researcher<br>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <img id="about-anna" src="./img/about-anna.jpg" height="250" width="250">
+                <h2>About Anna</h2>
+                <p>I am a mid-level UX researcher currently working for CareerBuilder.com, an agile technology environment. I am currently principal researcher for multiple products that are both business and consumer facing. In this role, I work with designers and product managers to deliver the best solution to users.</p>
+                <p>I gather frequent user insights and feedback via in-person and remote usability/concept feedback sessions, unmoderated online tests, surveys, voice of customer feedback and analytics data to inform business solutions.</p>
+                <p>My research experience includes designing, moderating, note-taking, recruiting and delivering findings for consumer, business and SaaS user studies. Much of this experience includes working on a team with fellow researchers and designers to achieve the best results possible.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Download Section -->
+    <section id="download" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Resume</h2>
+                    <a href="https://drive.google.com/file/d/0B709xZUmVV8GNVlwMHg1TkpxelU/view" class="btn btn-default btn-lg" target="_blank">View or Download My Resume</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="content-section text-center">
+        <div class="portfolio-section">
+            <div class="container">
+                <div id="portfolio-section-container" class="container">
+                    <h2>Portfolio</h2>
+                    <div id="portfolio-imgs" class="row">
+                        <div class="portfolio-thumbnail col-md-2 col-md-offset-1">
+                            <a href="./content/portfolio/student-personas.html"><img src="./img/student.jpg"></a>
+							<div id="student-personas" class="title">Student Personas</div>
+                        </div>
+                        <div class="portfolio-thumbnail col-md-2">
+                            <a href="./content/portfolio/consumer-personas.html"><img src="./img/personas.jpg"></a>
+							<div id="consumer-personas" class="title">Consumer Personas</div>
+                        </div>
+                        <div class="portfolio-thumbnail col-md-2">
+                            <a href="./content/portfolio/usability-testing.html"><img src="./img/usability.jpg"></a>
+							<div id="usability-testing" class="title">Usability Testing</div>
+                        </div>
+                        <div class="portfolio-thumbnail col-md-2">
+                            <a href="./content/portfolio/voc-and-surveys.html"><img src="./img/surveys.png"></a>
+							<div id="surveys" class="title">VOC &amp; Surveys</div>
+                        </div>
+                        <div class="portfolio-thumbnail col-md-2">
+                            <!-- <a href="./content/portfolio/documentation.html"><img src="./img/documentation.jpg" width="250" height="250"></a> -->
+                            <a href="#portfolio"><img src="./img/documentation.jpg" width="250" height="250"></a>
+							<div id="docs" class="title">Documentation</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Contact Section -->
+    <section id="contact" class="content-section text-center">
+        <div class="contact-section">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact Anna</h2>
+                <p>Feel free to email me, or network with me on LinkedIn!</p>
+                <p><a href="mailto:feedback@startbootstrap.com">steadham.anna@gmail.com</a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://www.linkedin.com/in/annasteadham" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Anna Steadham 2016</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="js/grayscale.js"></script>
+
+</body>
+
 </html>
